--- a/index.html
+++ b/index.html
@@ -16,27 +16,30 @@
 </head>
 <body class="body">
 
-<header class="header">
-    <img class="header__logo" src="img\logo-social-blanco.png" alt="logo">
-</header>
-
-<nav class="nav">
-       <ul class="nav__links">
-        <li class="nav__item">
-            <a class="nav__link" href="index.html">Home</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">
+        <img src="img/icon-logo.png" width="30" height="30" class="d-inline-block align-top" alt="socialnetworkargentina">
+      </a>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Inicio <span class="sr-only"></span></a>
         </li>
-        <li class="nav__item">
-            <a class="nav__link" href="pages/nosotros.html">Nosotros</a>
+        <li class="nav-item">
+          <a class="nav-link" href="pages/nosotros.html">Nosotros</a>
         </li>
-        <li class="nav__item">
-            <a class="nav__link" href="pages/servicios.html">Servicios</a></li>
-        <li class="nav__item"><a class="nav__link" href="pages/contacto.html">Contacto</a>
+        <li class="nav-item">
+          <a class="nav-link" href="pages/servicios.htm">Servicios</a>
         </li>
-        <li class="nav__item">
-            <a class="nav__link" href="pages/preguntas.html">Preguntas</a>
+        <li class="nav-item">
+          <a class="nav-link" href="pages/preguntas.html">Preguntas</a>
         </li>
-    </ul>
-</nav>
+        <li class="nav-item">
+            <a class="nav-link" href="pages/contacto.html">Contacto</a>
+          </li>
+      </ul>
+    </div>
+  </nav>
 
  <main class="main">
         <div class="div">
