--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,54 +15,56 @@
 </head>
 <body class="body">
 
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+            <img src="img/icon-logo.png" width="30" height="30" class="d-inline-block align-top" alt="socialnetworkargentina">
+          </a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="../index.html">Inicio <span class="sr-only"></span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="servicios.htm">Servicios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="preguntas.html">Preguntas</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="contacto.html">Contacto</a>
+              </li>
+          </ul>
+        </div>
+      </nav>
 
-    <header class="header">
-        <img class="header__logo" src="..\img\logo-social-blanco.png" alt="logo">
-    
-    </header>
-
-    <nav class="nav">
-        <ul class="nav__links">
-            <li class="nav__item">
-                <a class="nav__link" href="../index.html">Home</a>
-            </li>
-            <li class="nav__item">
-                <a class="nav__link" href="nosotros.html">Nosotros</a>
-            </li>
-            <li class="nav__item">
-                <a class="nav__link" href="servicios.html">Servicios</a>
-            </li>
-            <li class="nav__item">
-                <a class="nav__link" href="contacto.html">Contacto</a>
-            </li>
-            <li class="nav__item">
-                <a class="nav__link" href="preguntas.html">Preguntas</a>
-            </li>
-        </ul>
-    </nav>
-
-<main class="main">
+<main class="main container">
     <div class="div">
 
         <img class="div__slider" src="..\img\contacto.jpg" alt="img-contacto">
 
         <h1 id="titulo">Contacto</h1>
 
-         <form class="div__formulario" action="#">
-                <label for="nombre">Nombre:
-                    <input type="text" placeholder="Nombre"><br>
-                </label><br>
-                <label for="email">Email:
-                    <input type="email" required placeholder="aaa@gmail.com" name="email"><br>
-                </label><br>
-                    <label for="Consulta"> Consulta:<br><br>
-                    <textarea placeholder="Escriba su consulta"></textarea>
-                </label> <br><br>
-                    <div>¿Querés recibir más información sobre nosotros?
-                    <input type="checkbox" name="acepta" value="1">
-                    </div> <br>
-                    <input type="submit" value="Enviar"> <br>
-        </form>
+        <form>
+            <div class="col-md-4">
+            <div class="form-group">
+                <label for="exampleFormControl1">Nombre</label>
+                <input type="text" class="form-control" id="exampleFormControl1" placeholder="Nombre">
+              </div>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+              <small id="emailHelp" class="form-text text-muted">Nunca compartiremos tu email con nadie más.</small>
+            </div>
+            <div class="form-group">
+                <label for="exampleFormControlTextarea1">Comentario</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+          </form>
 
     </div>
 
