Cambios de Nav y Bootsrap en todas la paginas

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,7 +17,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">
-            <img src="img/icon-logo.png" width="30" height="30" class="d-inline-block align-top" alt="socialnetworkargentina">
+            <img src="../img/icon-logo.png" width="30" height="30" class="d-inline-block align-top" alt="socialnetworkargentina">
           </a>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
@@ -28,7 +28,7 @@
               <a class="nav-link" href="nosotros.html">Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="servicios.htm">Servicios</a>
+              <a class="nav-link" href="servicios.html">Servicios</a>
             </li>
             <li class="nav-item">
               <a class="nav-link disabled" href="preguntas.html">Preguntas</a>
