--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a class="nav-link" href="pages/nosotros.html">Nosotros</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="pages/servicios.htm">Servicios</a>
+          <a class="nav-link" href="pages/servicios.html">Servicios</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="pages/preguntas.html">Preguntas</a>
