--- a/pages/preguntas.html
+++ b/pages/preguntas.html
@@ -10,33 +10,36 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <script src="../js/bootstrap.bundle.min.js"></script>
 </head>
 <body class="body">
 
-    <header class="header">
-        <img class="header__logo" src="..\img\logo-social-blanco.png" alt="logo">
-    
-    </header>
-
-    <nav class="nav">
-        <ul class="nav__links">
-            <li class="nav__item">
-                <a class="nav__link" href="../index.html">Home</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+            <img src="../img/icon-logo.png" width="30" height="30" class="d-inline-block align-top" alt="socialnetworkargentina">
+          </a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="../index.html">Inicio <span class="sr-only"></span></a>
             </li>
-            <li class="nav__item">
-                <a class="nav__link" href="nosotros.html">Nosotros</a>
+            <li class="nav-item">
+              <a class="nav-link" href="nosotros.html">Nosotros</a>
             </li>
-            <li class="nav__item">
-                <a class="nav__link" href="servicios.html">Servicios</a>
+            <li class="nav-item">
+              <a class="nav-link" href="servicios.html">Servicios</a>
             </li>
-            <li class="nav__item">
-                <a class="nav__link" href="contacto.html">Contacto</a>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="preguntas.html">Preguntas</a>
             </li>
-            <li class="nav__item">
-                <a class="nav__link" href="preguntas.html">Preguntas</a>
-            </li>
-        </ul>
-    </nav>
+            <li class="nav-item">
+                <a class="nav-link" href="contacto.html">Contacto</a>
+              </li>
+          </ul>
+        </div>
+      </nav>
 
     <main class="main">
         <div class="div">
